# terms-and-conditions-assistant

./: .env.example  .gitignore  README.md  app.py  crew.py  main.py  pyproject.toml  report.md  requirements.txt  run.py  setup.py  utils.py
config/: agents.yaml  tasks.yaml
