[project]
name = "tc_app"
version = "0.1.0"
description = "tc_app using crewAI"
authors = [{ name = "Your Name", email = "you@example.com" }]
requires-python = ">=3.10,<3.13"
dependencies = [
    "crewai[tools]>=0.114.0,<1.0.0"
]

[project.scripts]
tc_app = "tc_app.main:run"
run_crew = "tc_app.main:run"
train = "tc_app.main:train"
replay = "tc_app.main:replay"
test = "tc_app.main:test"

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[tool.crewai]
type = "crew"
